# lintwin

./: .gitignore  CLAUDE.md  README.md  TESTING.md  pyproject.toml
docs/superpowers/plans/: 2026-05-20-lintwin.md  2026-05-20-lintwin.md.tasks.json  2026-05-22-interactive-sync-selector.md  2026-05-22-interactive-sync-selector.md.tasks.json
docs/superpowers/specs/: 2026-05-22-interactive-sync-selector-design.md
lintwin/: __main__.py
lintwin/cli/: diff.py  exclude.py  format.py  init.py  main.py  packages.py  pull.py  remote.py  selector.py  status.py  sync.py  track.py
lintwin/core/: config.py  constants.py  git.py  rsync.py  scanner.py  sizeguard.py  snapshot.py
tests/: conftest.py  test_cli_exclude.py  test_cli_init.py  test_cli_packages.py  test_cli_pull.py  test_cli_remote.py  test_cli_status.py  test_cli_sync.py  test_cli_track.py  test_config.py  test_git.py  test_packages.py  test_rsync.py  test_scanner.py  test_selector.py  test_sizeguard.py  test_snapshot.py
