[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lintwin"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "tomli-w>=1.0",
    "readchar>=4.0",
]

[project.scripts]
lintwin = "lintwin.cli.main:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
